# controller/auth.js
@@ -1,37 +1,37 @@
-const { StatusCodes } = require('http-status-codes');
+const { StatusCodes } = require("http-status-codes");
 
-const User = require('../models/User');
-const { BadRequestError, UnauthenticatedError } = require('../errors');
+const User = require("../models/User");
+const { BadRequestError, UnauthenticatedError } = require("../errors");
 
 const register = async (req, res) => {
-    const user = await User.create({ ...req.body });
-    const token = user.createJWT();
-    res.status(StatusCodes.CREATED).json({ user: { name: user.name }, token });
+  const user = await User.create({ ...req.body });
+  const token = user.createJWT();
+  res.status(StatusCodes.CREATED).json({ user: { name: user.name }, token });
 };
 
 const login = async (req, res) => {
-    const { email, password } = req.body;
+  const { email, password } = req.body;
 
-    if (!email || !password) {
-        throw new BadRequestError('Please provide email and password');
-    }
+  if (!email || !password) {
+    throw new BadRequestError("Please provide email and password");
+  }
 
-    const user = await User.findOne({ email: email });
-    if (!user) {
-        throw new UnauthenticatedError('Invalid Credentials');
-    }
+  const user = await User.findOne({ email: email });
+  if (!user) {
+    throw new UnauthenticatedError("Invalid Credentials");
+  }
 
-    // compare password
-    const isPasswordCorrect = await user.comparePassword(password);
-    if (!isPasswordCorrect) {
-        throw new UnauthenticatedError('Invalid Credentials');
-    }
+  // compare password
+  const isPasswordCorrect = await user.comparePassword(password);
+  if (!isPasswordCorrect) {
+    throw new UnauthenticatedError("Invalid Credentials");
+  }
 
-    const token = user.createJWT();
-    res.status(StatusCodes.OK).json({ user: { name: user.name }, token });
+  const token = user.createJWT();
+  res.status(StatusCodes.OK).json({ user: { name: user.name }, token });
 };
 
 module.exports = {
-    register,
-    login,
+  register,
+  login,
 };
