# models/Job.js
@@ -1,29 +1,29 @@
-const mongoose = require('mongoose');
+const mongoose = require("mongoose");
 
 const JobSchema = new mongoose.Schema(
-    {
-        company: {
-            type: String,
-            required: [true, 'Please provide company name'],
-            maxLength: 100,
-        },
-        position: {
-            type: String,
-            required: [true, 'Please provide position'],
-            maxLength: 100,
-        },
-        status: {
-            type: String,
-            enum: ['interview', 'declined', 'pending'],
-            default: 'pending',
-        },
-        createdBy: {
-            type: mongoose.Types.ObjectId,
-            ref: 'Users',
-            required: [true, 'Please provide user'],
-        },
+  {
+    company: {
+      type: String,
+      required: [true, "Please provide company name"],
+      maxLength: 100,
     },
-    { timestamps: true }
+    position: {
+      type: String,
+      required: [true, "Please provide position"],
+      maxLength: 100,
+    },
+    status: {
+      type: String,
+      enum: ["interview", "declined", "pending"],
+      default: "pending",
+    },
+    createdBy: {
+      type: mongoose.Types.ObjectId,
+      ref: "Users",
+      required: [true, "Please provide user"],
+    },
+  },
+  { timestamps: true }
 );
 
-module.exports = mongoose.model('Jobs', JobSchema);
+module.exports = mongoose.model("Jobs", JobSchema);
