# routes/auth.js
@@ -1,9 +1,9 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
 
-const { login, register } = require('../controller/auth');
+const { login, register } = require("../controller/auth");
 
-router.post('/register', register);
-router.post('/login', login);
+router.post("/register", register);
+router.post("/login", login);
 
 module.exports = router;
