# routes/jobs.js
@@ -1,15 +1,15 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
 
 const {
-    getAllJobs,
-    getJob,
-    createJob,
-    updateJob,
-    deleteJob,
-} = require('../controller/job');
+  getAllJobs,
+  getJob,
+  createJob,
+  updateJob,
+  deleteJob,
+} = require("../controller/job");
 
-router.route('/').post(createJob).get(getAllJobs);
-router.route('/:id').get(getJob).delete(deleteJob).patch(updateJob);
+router.route("/").post(createJob).get(getAllJobs);
+router.route("/:id").get(getJob).delete(deleteJob).patch(updateJob);
 
 module.exports = router;
